# Artifact-Catalog

./: .gitignore  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  publish-crate.yml
builds/: README.md
checksums/: sha256sums.txt
docs/: ISSUE_BACKLOG.md  github_issue_seed.sh
examples/: artifacts.example.yaml  sha256sums.example.txt
manifests/: artifacts.yaml
scripts/: add-artifact.sh  bootstrap_release_assets.py  import-github-release.sh  locker  publish-release.sh  resolve-url.sh  verify-artifacts.sh
src/: main.rs
