[package]
name = "artifact-catalog"
version = "0.1.2"
edition = "2024"
description = "Curated artifact catalog CLI for staging, verifying, publishing, and syncing operator tooling"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/CameronCandau/Artifact-Catalog"
homepage = "https://github.com/CameronCandau/Artifact-Catalog"
documentation = "https://docs.rs/artifact-catalog"
keywords = ["cli", "artifacts", "catalog", "release", "security"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "src/**",
    "builds/README.md",
    "checksums/sha256sums.txt",
    "examples/artifacts.example.yaml",
    "examples/sha256sums.example.txt",
    "manifests/artifacts.yaml",
    "scripts/bootstrap_release_assets.py",
    "scripts/locker",
    "staging/release-assets/.gitkeep",
]

[[bin]]
name = "locker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dialoguer = "0.12"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"
